--- a/gendactu/public/css/accueil.css
+++ b/gendactu/public/css/accueil.css
@@ -60,3 +60,20 @@ body{
     max-height: 200px;
     margin-bottom: 20px;
 }
+
+@media screen and (max-width: 640px){
+    #searchbar {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .topic{
+        word-wrap: break-word;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
