--- a/gendactu/resources/views/layouts/gestion.edge
+++ b/gendactu/resources/views/layouts/gestion.edge
@@ -17,12 +17,12 @@
         <h3 id="welcome">Gestion des actualités</h3>
       </div>
       <div class="headermenu">
-          <div id="mleft">
-              <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
-            </div>
+        <div id="mleft">
+          <a href="/actu" class="menu" title="Accueil"><i class="fa fa-home" aria-hidden="true"></i><div class="menupc"> Accueil </div></a>
+        </div>
         <div id="mright">
           <div id="logout">
-              <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"> </i> Deconnexion </a>
+              <a href="/logout" class="menu" title="Deconnexion"><i class="fa fa-sign-out" aria-hidden="true"> </i><div class="menupc"> Deconnexion </div></a>
           </div>
         </div>
       </div> 
