--- a/gendactu/public/css/style.css
+++ b/gendactu/public/css/style.css
@@ -45,15 +45,14 @@ a {
   text-decoration: underline;
 }
 
-p {
-  margin: 0.83rem 0;
-}
+
 
 #formCo>div, #pres{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  justify-content: center;
 }
 
 .form>div, .form>form{
@@ -72,7 +71,6 @@ p {
 
 .form{
   background-color: #BDB3CB33;
-  width: 100%;
   height: 500px;
   display: flex;
   justify-content: space-around;
@@ -161,6 +159,9 @@ button>i{
 }
 
 .headermenu>div>a, #mright>div>a,#mright>div>div>a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: black;
 }
 
@@ -194,4 +195,19 @@ i{
 
 #gestion{
   margin-right: 5px;
+}
+
+
+.menu{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+}
+
+@media screen and (max-width: 640px){
+  .menupc{
+    display: none;
+  }
 }
