--- a/gendactu/public/css/topic.css
+++ b/gendactu/public/css/topic.css
@@ -6,7 +6,7 @@ body{
 
 footer{
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -24,7 +24,6 @@ footer>div>a{
 
 .topic{
     text-align: center;
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -37,6 +36,32 @@ footer>div>a{
     width: 50%;
     padding: 15px 0px;
     margin: 10px 0px;
+}
+
+@media screen and (max-width: 640px){
+    .topic{
+        word-wrap: break-word;
+        margin-left: 5px;
+        margin-right: 5px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .topic>div{
+        width: 100%;
+        word-wrap: break-word;
+
+    }
+
+    #desc{
+        display: inline;
+        word-break: break-word; 
+    }
+
+    footer{
+        position: relative;
+        bottom: 0px;
+    }
 }
 
 
