--- a/gendactu/resources/views/layouts/accueil.edge
+++ b/gendactu/resources/views/layouts/accueil.edge
@@ -23,18 +23,18 @@
   </div>
   <div class="headermenu">
     <div id="mleft">
-      <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
+      <a href="/actu" class="menu" title="Accueil"><i class="fa fa-home" aria-hidden="true"></i><div class="menupc"> Accueil </div></a>
     </div>
     <div id="mright">
     @if(admin == true)
       <div id="gestion">
           <div >
-            <a href="/gestion/topics" ><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
+            <a href="/gestion/topics" class="menu" title="Gestion"><i class="fa fa-cog" aria-hidden="true"> </i><div class="menupc"> Gestion </div></a>
           </div>
       </div>
       @endif    
       <div id="logout">
-          <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"> </i> Deconnexion </a>
+          <a href="/logout" class="menu" title="Deconnexion"><i class="fa fa-sign-out" aria-hidden="true"> </i><div class="menupc"> Deconnexion </div></a>
       </div>
     </div>
   </div>
@@ -54,7 +54,7 @@
       </div>
       <button  onclick="recherche()" class="bt_sbt">Rechercher<i class="fa fa-search" aria-hidden="true"></i></button>
     </div>
-    <div id="francemap"></div>
+    <div id="francemap" class="hidden-phone"></div>
     <div id="topicsliste"></div>
     <div id="pagination"></div>
     <script>
