--- a/gendactu/resources/views/layouts/edit.edge
+++ b/gendactu/resources/views/layouts/edit.edge
@@ -13,21 +13,21 @@
         <h3 id="welcome">Edition d'une actualité</h3>
       </div>
       <div class="headermenu">
-            <div id="mleft">
-                    <a href="/actu"><i class="fa fa-home" aria-hidden="true"></i> Accueil </a>
-                  </div>
+        <div id="mleft">
+          <a href="/actu" class="menu" title="Accueil"><i class="fa fa-home" aria-hidden="true"></i><div class="menupc"> Accueil </div></a>
+        </div>
         <div id="mright">
-                @if(admin == true)
-                  <div id="gestion">
-                      <div >
-                        <a href="/gestion/topics" ><i class="fa fa-cog" aria-hidden="true"> </i> Gestion </a>
-                      </div>
-                  </div>
-                  @endif    
-                  <div id="logout">
-                      <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"> </i> Deconnexion </a>
-                  </div>
-                </div>
+        @if(admin == true)
+          <div id="gestion">
+              <div >
+                <a href="/gestion/topics" class="menu" title="Gestion"><i class="fa fa-cog" aria-hidden="true"> </i><div class="menupc"> Gestion </div></a>
+              </div>
+          </div>
+          @endif    
+          <div id="logout">
+              <a href="/logout" class="menu" title="Deconnexion"><i class="fa fa-sign-out" aria-hidden="true"> </i><div class="menupc"> Deconnexion </div></a>
+          </div>
+        </div>
       </div>
 @endsection
 
