--- a/gendactu/resources/views/layouts/main.edge
+++ b/gendactu/resources/views/layouts/main.edge
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="csrf_token" content="{{ csrfToken }}">
   <link rel="icon" href="/images/gendy.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
       @!section('title')
   </title>
